build.log
d_net.c:607:2: error: call to undeclared function 'web_fclose'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  607 |         web_fclose (debugfile);
      |         ^
1 error generated.
emcc: error: '/home/runner/work/DOOM/DOOM/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -fvisibility=default -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/runner/work/DOOM/DOOM/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O2 -w -I. -DNORMALUNIX d_net.c -c -o /tmp/emscripten_temp_ns48ikfn/d_net_3.o' failed (returned 1)
